--- a/src/components/Track/Track.css
+++ b/src/components/Track/Track.css
@@ -1,8 +1,9 @@
 .track{
     display: flex;
     align-items: center;
-    border-radius: .25rem;
-    padding: .5rem .75rem;
+    border-radius: .35rem;
+    padding: .25rem .25rem;
+    margin: .125rem .125rem;
 }
 
 .track:hover{
